refactor:  :recycle: change the method invoke for parsing Customer responseDTO into list, needed for tests