@@ -1,12 +1,14 @@
 package com.example.restaurant.services.customer.commands;
 
 import com.example.restaurant.mappers.CustomerMapper;
+import com.example.restaurant.models.Customer;
 import com.example.restaurant.models.dto.customer.CustomerResponseDTO;
 import com.example.restaurant.repositories.CustomerRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,8 +18,9 @@ public class ListCustomersCommand {
   private final CustomerMapper customerMapper;
 
   public List<CustomerResponseDTO> execute() {
-    return customerRepository.findAll().stream()
-            .map(customerMapper::toDTO)
-            .toList();
+    List<Customer> customersEntities = customerRepository.findAll();
+
+    return customersEntities.stream()
+            .map(customerMapper::toDTO).collect(Collectors.toList());
   }
 }
